# etsy-lister

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJE_ANALIZ.md  README.md  categories.yaml  config.example.yaml  pyproject.toml  requirements.txt  setup.py  test_advanced_scraper.py
.github/workflows/: ci.yml
data/: erank_keywords.csv
days/: advanced_scraper.py  analyze_scraped_data.py  create_demo_data.py  day01_setup.py  day02_scrape_sample.py  day03_scrape_paged.py  day04_clean_data.py  day05_analysis.py  day06_text_prep.py  day07_tfidf.py  day08_top_sellers_common_terms.py  day09_title_suggester.py  day10_interim_report.py  day11_label_and_split.py  day12_train_eval.py  day13_add_ratings_reviews.py  day14_flask_app.py  day15_ux_improvements.py  day16_write_report.py  day17_collect_visuals.py  day18_docs_readme.py  day19_slides.py  day20_wrapup.py  generate_samples.py
outputs/: day05_summary.md  day07_top_terms.json  day09_suggestions.txt  day10_interim_report.md  day12_report.txt  day20_wrapup.md
src/: __init__.py  config.py
src/models/: __init__.py  training.py
src/utils/: advanced_scrape.py  erank.py  io.py  logger.py  proxy_manager.py  scrape.py  text.py
tests/: conftest.py  test_erank_utils.py  test_io_utils.py  test_text_utils.py
